 - Add new dilloc program to remote control dillo from the command line.
 - Set DILLO_PID variable when executing actions so dilloc can read it.
 - Add support for "page_action" option to define custom entries in the page
   menu to run programs or scripts.
 - Add "mark_unloaded_images" option to show a border in images not loaded, so
   they are easier to see.
   Patches: Rodrigo Arias Mallo
+- Middle click on back or forward button opens page in new tab.
   Patches: Alex
+- Add support for Content-Disposition header to set the filename.
   Patches: Cameron Paul, Rodrigo Arias Mallo
+- Fix build in NetBSD and avoid ctype(3) incorrect sign extension.
   Patches: Leonardo Taccari
+- Fix use-after-free in HTTP server and OpenSSL connection dialog.
   Patches: Magnus Larsen

dillo-3.2.0 [Jan 18, 2025]

+- Add new_tab_page option to open a custom new tab page.
   Patches: Alex, Rodrigo Arias Mallo
+- Ignore empty page title for tab labels.
 - Fix segfault when clicking the "Done" button in downloads dialog.
 - Add zoom support using Ctrl +/-/0 and the "zoom_factor" option.
 - Fix wrong redirect by meta refresh without URL.
 - Display JSON as plain text.
 - Add line number anchors in HTML source view.
 - Make Dillo strictly C99, C++11 and POSIX-2001 compliant, without depending on
   GNU extensions.
 - Perform an emergency stop of the layout engine loop after 1000 iterations to
   prevent a hang.
 - Fix use-after-free on errors in TLS connection.
 - Add scrollbar_page_mode option to easily scroll full pages with the mouse.
 - Control the page overlap with the scroll_page_overlap option.
 - Set focus_new_tab=NO and show_quit_dialog=NO by default.
 - Fix GET requests over HTTPS via a proxy.
 - Improve image resize logic to always try to preserve the aspect ratio.
 - Reload current page on SIGUSR1 signal
 - Print library versions and enabled features with dillo -v.
 - Allow image formats to be ignored with the "ignore_image_formats" option.